# synth-subnet50-shadow-miner

./: .env.example  .gitignore  README.md  pyproject.toml
config/: default.yaml
docs/: top_miners_regime_research.md
example-inference-node/: README.md  pyproject.toml
example-inference-node/private_synth_models/: __init__.py  server.py
example-inference-node/private_synth_models/data/: polygon_1m.py
example-inference-node/private_synth_models/features/: __init__.py  vectorizer.py
example-inference-node/private_synth_models/models/: __init__.py  similarity.py
example-inference-node/tests/: test_predict.py
scripts/: fetch_btc_polygon.py  generate_btc_forecast.py  run_shadow_loop.py  top_miners_regime_research.py
src/synth_shadow/: __init__.py  assets.py  cli.py  config.py
src/synth_shadow/backtest/: __init__.py  rolling.py
src/synth_shadow/data/: __init__.py  polygon_client.py  schema.py
src/synth_shadow/features/: distribution.py  momentum.py  pipeline.py  returns.py  volatility.py
src/synth_shadow/forecasting/: __init__.py  http_provider.py  loader.py  local_provider.py  protocol.py
src/synth_shadow/inspection/: __init__.py  forecast.py  live_sanity.py
src/synth_shadow/models/: __init__.py  baseline.py  btc_generator.py  current_state.py  loader.py  path_sampler.py  protocol.py  session_path_model.py
src/synth_shadow/orchestration/: __init__.py  shadow_cycle.py
tests/: test_crps.py  test_http_provider.py  test_polygon_client.py  test_rolling_backtest.py  test_synth_score.py  test_top_miners_regime_research.py
(+19 files in other folders)
