[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "private-synth-btc-inference"
version = "0.1.0"
description = "Private BTC forecast inference node for Synth subnet 50 shadow miner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.0",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["private_synth_models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

